// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer simple 1`] = `
Children {
  "children": Array [
    Base {
      "fills": Array [
        Object {
          "color": Object {
            "b": 0,
            "g": 1,
            "r": 0.07058823529411765,
          },
          "type": "SOLID",
        },
      ],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
      },
      "type": "RECTANGLE",
    },
  ],
}
`;

exports[`renderer simple 2 1`] = `
Children {
  "children": Array [
    Base {
      "fills": Array [
        Object {
          "color": Object {
            "b": 0,
            "g": 0.20784313725490197,
            "r": 1,
          },
          "type": "SOLID",
        },
      ],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
      },
      "type": "RECTANGLE",
    },
  ],
}
`;
